fix image alignment during result generation

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -255,6 +255,7 @@ h1 {
 
       @media (max-width: 900px) {
         width: 70%;
+        margin: 0;
       }
 
       > img {
